# djangodefaults

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
kition_djangodefaults/: __init__.py
kition_djangodefaults/settings/: default.py
tests/settings/: test_util.py
