[tool.poetry]
name = "kition-djangodefaults"
version = "0.1.0"
description = ""
authors = ["Dennis Stritzke <dennis.stritzke@kition.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.7"
mypy = "1.11.2"
django-stubs = "5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
